Fix the filter widget in the Files browser.

It turns out that the problem here was our custom MyDirLister class,
which tried to filter out files that Amarok cannot play. Once upon a
time (in 1.x) this class actually worked, but now it simply broke
filtering, and for the life of me I can't figure out how it's supposed
to work correctly. Finally I ended up removing the whole class.

So the filtering works again now, but Amarok now also shows non-music
files (.txt, etc). Whether that's a problem is debatable - I've heard
some people saying that the suppression of certain file types was
irritating anyway.

BUG: 176139

svn path=/trunk/extragear/multimedia/amarok/; revision=959203